--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
+  "scripts": {
+    "start": "npx hardhat node",
+    "compile": "npx hardhat compile",
+    "deploy": "npx hardhat run scripts/deploy.js --network localhost",
+    "hardhat": "npx hardhat",
+    "zk-init": "node scripts/zk-init.js"
+  },
   "dependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.2",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.2",
-    "hardhat": "^2.5.0"
+    "hardhat": "^2.5.0",
+    "zokrates-js": "^1.0.35"
   }
 }
